# analise-gestao-financeira-pessoal

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/src/: .env-example  config_log.yml  main.py
backend/src/api/: api_controller.py
backend/src/api/controllers/: __init__.py  file_controller.py  report_controller.py
backend/src/api/repositories/: data_repository.py
backend/src/api/routes/: __init__.py  file_router.py  files_router.py  report_router.py  reports_router.py
backend/src/api/schemas/: __init__.py  category_amount.py  date_income_and_expense_amount.py  file_response.py  financial_schema.py  financial_summary.py
backend/src/api/services/: file_service.py  report_service.py
backend/src/api/services/errors/: __init__.py
backend/src/api/utils/: __init__.py  csv_file.py  file_utils.py  validate_csv.py
backend/src/api/utils/dataframe/: group_sum.py  sum_by_type.py  summarize_income_and_expense.py  transform_date.py
backend/src/config/: __init__.py  env_config.py  log_config.py  log_levels.py
backend/src/core/: app_factory.py  log_config.py
backend/src/log/: __init__.py
backend/src/log/data/: app.log.2025-10-29
backend/src/log/factory/: __init__.py  logger_factory.py
backend/src/log/strategies/: __init__.py  base_strategy.py  console_strategy.py  json_file_strategy.py
backend/src/middleware/: __init__.py  logging_middleware.py
backend/tests/: conftest.py
backend/tests/integration/: test_upload_controller.py
backend/tests/unit/: test_file_service.py
backend/uploads/: teste.csv
(+77 files in other folders)
